# snippets

bash/clean-reddit-theme/: README.md  pre-commit
bash/mysql-dump/: README.md  mysql_dump.sh
bash/phpbb-ext/: README.md  phpbb_ext.sh
bash/simple-grid-system/: README.md  pre-commit
bash/vim-git/: PKGBUILD
cpp/aur-setup/: .gitmodules  CMakeLists.txt  README.md  main.cpp
cpp/aur-setup/aur-git-hooks/: pre-commit.hook
cpp/string-utils/: README.md  string-utils.cpp  string-utils.hpp
dockerfile/arch-linux/: Dockerfile  README.md
dockerfile/arch-linux/config/: ignorepkg
javascript/auto-embed-video/: README.md  auto-embed-services.js  auto-embed.js
javascript/auto-embed-videos/: auto-embed-services.js  auto-embed.js
javascript/spoiler/: README.md  spoiler.js
php/random-string/: README.md  rand-string.php  random-string.php
php/web-thumbnail/: README.md  web-thumbnail.php  web_thumbnail.php
pkgbuild/megasync-git/: PKGBUILD  README.md
pkgbuild/modsecurity/: PKGBUILD  README.md
pkgbuild/qbittorrent-git/: PKGBUILD  README.md
pkgbuild/vim-git/: .gitignore  PKGBUILD  README.md
pkgbuild/weechat-git/: PKGBUILD  README.md
ruby/aur-setup/: Gemfile  README.md  aur-setup
ruby/aur-setup/aur-git-hooks/: pre-commit.hook
ruby/changelog/: README.md  mkchangelog
ruby/random-string/: README.md  random-string.rb
ruby/screenshot/: Gemfile  README.md  screenshot
ruby/screenshot-tool/: README.md  screenshot
